--- a/FsKaggleDatasetDownloader/FsKaggleDatasetDownloader.fsproj
+++ b/FsKaggleDatasetDownloader/FsKaggleDatasetDownloader.fsproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <Compile Include="Core.fs" />
     <Compile Include="Kaggle.fs" />
+    <Compile Include="Interop.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="System.Text.Json" Version="4.7.0" />
